# Keepr

./: .audit-notes-code-v0.4.md  .audit-notes-code.md  .audit-notes-competitors.md  .audit-notes-keep.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Google Keep.mhtml  LICENSE  README.md  RESEARCH.md  RESEARCH_FEATURE_PLAN.md  RESEARCH_FEATURE_PLAN_v0.5.md  ROADMAP.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
dist-web-clipper/: Keepr-Web-Clipper-0.25.10.crx  Keepr-Web-Clipper-0.25.11.crx  Keepr-Web-Clipper-0.25.12.crx  Keepr-Web-Clipper-0.25.13.crx  Keepr-Web-Clipper-0.25.14.crx  Keepr-Web-Clipper-0.25.3.crx  Keepr-Web-Clipper-0.25.4.crx  Keepr-Web-Clipper-0.25.5.crx  Keepr-Web-Clipper-0.25.6.crx  Keepr-Web-Clipper-0.25.7.crx  Keepr-Web-Clipper-0.25.8.crx  Keepr-Web-Clipper-0.25.9.crx
docs/research-archive/: v0.19-to-v0.22-research.md
scripts/: build-web-clipper.mjs
src/: App.tsx  api.ts  colors.ts  index.css  keep-palette.js  store.ts  types.ts
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  lock.rs  main.rs  transcribe.rs  vault.rs  web_clipper.rs
src-tauri/src/commands/: attachments.rs  history.rs  io.rs  labels.rs  mod.rs  notes.rs  reminders.rs  security.rs  sync.rs
src-tauri/src/sync/: discovery.rs  mod.rs  protocol.rs  server.rs
src/__tests__/: autoBackup.test.ts  backgroundPatterns.test.ts  colors.test.ts  encodeWav.test.ts  filterNotes.test.ts  globalHotkey.test.ts  hashtagAutocomplete.test.ts  hashtagMerge.test.ts  hashtags.test.ts  lineDiff.test.ts  reminderPresets.test.ts  reminders.test.ts  setKind.test.ts  sortNotes.test.ts  storeZustandRegression.test.ts  trashRetention.test.ts  useIdleLock.test.ts  webClipperArticleExtractor.test.ts  wikiLinks.test.ts
src/components/: AppLockSection.tsx  AttachmentGrid.tsx  BulkActionBar.tsx  ChecklistSection.tsx  ColorPicker.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DocumentScannerModal.tsx  DrawingCanvasModal.tsx  ErrorBoundary.tsx  FilterChips.tsx  HelpOverlay.tsx  HistoryDrawer.tsx  IconBtn.tsx  LabelsManager.tsx  LockScreen.tsx  NewNoteBar.tsx  NoteCard.tsx  NoteEditor.tsx  NoteGrid.tsx  ReminderPicker.tsx  SettingsModal.tsx  Sidebar.tsx  SyncSection.tsx  TopBar.tsx  VaultSection.tsx  VoiceRecorderModal.tsx  VoiceTranscriptionSection.tsx  WebClipperSection.tsx
src/hooks/: useClickOutside.ts  useEscape.ts  useFlip.ts  useFocusTrap.ts  useGlobalHotkey.ts  useIdleLock.ts  useKeepShortcuts.ts
src/lib/: autoBackup.ts  backgroundPatterns.ts  filterNotes.ts  hashtags.ts  reminders.ts  trashRetention.ts  wikiLinks.ts
web-clipper/: README.md  article-extractor.js  background.js  manifest.json  options.html  options.js  popup.html  popup.js
