[package]
name = "keepr"
version = "0.4.1"
description = "Offline-first Google Keep clone"
authors = ["Matthew Ashton"]
edition = "2021"

[lib]
name = "keepr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
walkdir = "2"
anyhow = "1"
parking_lot = "0.12"
serde_json = "1"
# Image decoding/resizing for NF-V0.5-B thumbnail pipeline. Default
# features pull in heavyweight formats we don't need (TIFF, BMP, etc).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
