[package]
name = "keepr"
version = "0.22.0"
description = "Offline-first Google Keep clone"
authors = ["Matthew Ashton"]
edition = "2021"

[lib]
name = "keepr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
walkdir = "2"
anyhow = "1"
parking_lot = "0.12"
serde_json = "1"
# Image decoding/resizing for NF-V0.5-B thumbnail pipeline. Default
# features pull in heavyweight formats we don't need (TIFF, BMP, etc).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Password hashing for NF-V0.5-C App Lock. argon2 produces PHC strings
# that contain the salt + parameters, so we only need to persist one
# column. `std` for OsRng.
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
# Private Vault (NF-V0.5-C / 2 of 2): authenticated symmetric crypto.
# XChaCha20-Poly1305 picks a 24-byte nonce so we can sample one per
# encrypt without birthday-bound worries. `getrandom` for OsRng.
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = "0.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-opener = "2.5.4"
bip39 = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
