[package]
name = "keepr"
version = "0.24.0"
description = "Offline-first Google Keep clone"
authors = ["Matthew Ashton"]
edition = "2021"
# Explicit primary binary so the Tauri bundler doesn't pick up
# `keepr-verify` (src/bin/keepr-verify.rs) as the main app. The
# verifier remains a separate `cargo build --bin keepr-verify` target.
default-run = "keepr"

[lib]
name = "keepr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
walkdir = "2"
anyhow = "1"
parking_lot = "0.12"
serde_json = "1"
# Image decoding/resizing for NF-V0.5-B thumbnail pipeline. Default
# features pull in heavyweight formats we don't need (TIFF, BMP, etc).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Password hashing for NF-V0.5-C App Lock. argon2 produces PHC strings
# that contain the salt + parameters, so we only need to persist one
# column. `std` for OsRng.
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
# Private Vault (NF-V0.5-C / 2 of 2): authenticated symmetric crypto.
# XChaCha20-Poly1305 picks a 24-byte nonce so we can sample one per
# encrypt without birthday-bound worries. `getrandom` for OsRng.
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = "0.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-opener = "2.5.4"
bip39 = "2"
# v0.23.0 — opt-in offline speech transcription via whisper.cpp.
# `whisper-rs` builds whisper.cpp from source via `cmake` at compile
# time (~60 s first build, cached thereafter). We disable default
# features to skip GPU backends — pure CPU is fast enough for the
# 30-second voice-note range and ships everywhere. The model is NOT
# bundled: ~57 MB ggml-base.en-q5_1.bin is downloaded on first use
# with explicit user consent.
whisper-rs = { version = "0.16.0", default-features = false }
# WAV reader for the in-app voice notes Keepr saves at the AudioContext
# sample rate (typically 48 kHz, 16-bit mono).
hound = "3.5.1"
# Anti-aliased 48 kHz → 16 kHz resampler. Whisper expects 16 kHz mono
# f32. Linear interp at this 3:1 ratio aliases badly on sibilants;
# rubato's FFT-based polyphase resampler is the smallest pure-Rust
# library that does this right.
rubato = "0.16.2"
# Model download HTTP client. `rustls-tls` so we don't drag in OpenSSL
# on Windows; `stream` for chunked progress reporting; `gzip` is the
# default for HF served content. No `default-features = false` — we
# want connection pooling, redirects, etc.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# SHA-1 verification of the downloaded model bytes against the digest
# Hugging Face publishes for each whisper.cpp weight.
sha1 = "0.11.0"
# Async runtime for the Tauri command + the model download task.
# Tauri 2 commands declared `async fn` integrate with whatever runtime
# is present; we keep features minimal.
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros", "rt-multi-thread", "net"] }
# CRC32 of the WAV bytes — used to short-circuit redundant
# transcriptions when the same attachment is requested twice.
crc32fast = "1"
# Stream extensions for `reqwest::Response::bytes_stream()`.
futures-util = "0.3"
# v0.24.0 — Web Clipper localhost HTTP server. axum 0.8 is the
# smallest sane stack for ~4 routes + JSON + CORS; tower-http for
# the chrome-extension://moz-extension:// origin matching.
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
tower-http = { version = "0.6.11", default-features = false, features = ["cors"] }
# Random port allocation + 256-bit bearer token generation for the
# Web Clipper. Don't use the rand_chacha + getrandom combo from
# elsewhere — keep this isolated to the clipper module.
rand = "0.10.1"
# Subtle constant-time comparison for the Web Clipper bearer token
# (prevents timing oracles on token verification).
subtle = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
